more entity type corrections

--- a/cs.lproj/GDEntityTypes.strings
+++ b/cs.lproj/GDEntityTypes.strings
@@ -90,7 +90,7 @@
 "733" = "Organizační jednotka odborové organizace a organizace zaměstnavatelů";
 "734" = "Organizační jednotka zvláštní organizace pro zastoupení českých zájmů v mezinárodních nevládních organizacích";
 "736" = "Pobočný spolek";
-"741" = "Stavovská organizace - profesní komora";
+"741" = "Stavovská organizace, profesní komora";
 "745" = "Komora (s výjimkou profesních komor)";
 "751" = "Zájmové sdružení právnických osob";
 "761" = "Honební společenstvo";
